<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/lvl" />

    <TextView
        android:id="@+id/trying"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="10dp"
        android:gravity="end"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:text="@string/trying" />

    <LinearLayout
        android:id="@+id/container11"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/quest2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textSize="26dp"
            android:textColor="@color/white"
            android:text="@string/quest3" />

        <TextView
            android:id="@+id/result"
            android:layout_width="320dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="24dp" />

        <EditText
            android:id="@+id/input"
            android:layout_width="95dp"
            android:layout_height="45dp"
            android:background="@color/white"
            android:gravity="center"
            android:hint="@string/input"
            android:inputType="number"
            android:maxLength="7"
            android:padding="2dp" />

        <LinearLayout
            android:id="@+id/container12"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="vertical"
            android:padding="10dp">

            <Button
                android:id="@+id/send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/send" />

            <LinearLayout
                android:id="@+id/line11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/button_stroke_black95_press"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/back"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/text_levels"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:padding="10dp"
                    android:text="@string/hard"
                    android:textColor="@color/white"
                    android:textSize="24dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ads"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="650dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="7dp"
        android:gravity="bottom"
        android:orientation="vertical" >
        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="ca-app-pub-2382402581294867/8227575276">
        </com.google.android.gms.ads.AdView>/>
    </LinearLayout>

</RelativeLayout>