<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/main_background" />

    <LinearLayout
        android:id="@+id/RelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/level0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30sp"
            android:text="@string/choice"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold"
          />

        <LinearLayout
            android:id="@+id/container2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">


                <LinearLayout
                    android:id="@+id/container4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:id="@+id/line1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView1"
                            android:layout_width="110dp"
                            android:layout_height="55dp"
                            android:text="@string/easy"
                            android:layout_marginEnd="7sp"
                            android:background="@drawable/btn_gamelevels"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:gravity="center"
                            />
                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="110dp"
                            android:layout_height="55dp"
                            android:text="@string/medium"
                            android:layout_marginEnd="7sp"
                            android:background="@drawable/btn_gamelevels"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:gravity="center"
                            />
                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="110dp"
                            android:layout_height="55dp"
                            android:text="@string/hard"
                            android:background="@drawable/btn_gamelevels"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:gravity="center"
                            />
                    </LinearLayout>
                </LinearLayout>


            <LinearLayout
                android:id="@+id/container3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingLeft="1dp"
                android:paddingRight="1dp"
                android:textColor="@color/black95">

                <Button
                    android:id="@+id/button_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/button_stroke_black95_press"
                    android:text="@string/back"
                    android:textSize="20dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>